--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         <img src="assets/imgs/proyectos/experimenta.png" alt="experimenta">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Experimenta-Canal de Ventas</b></h3>
-                            <p>Proyecto colaborativo de maquetación de micro sitio para empresa Experimenta. <br> <b>Diseño ganador en hackaton Lab-Exp, julio de 2017.</b></p>
+                            <p>Proyecto colaborativo de maquetación de micro sitio para empresa Experimenta. <b>Diseño ganador en hackaton Lab-Exp, julio de 2017.</b></p>
                             <h6 class="uk-margin-remove uk-text-meta">Login: patitoadm@gmail.com / contra1X</h6>
                             <div class="uk-margin-small-top">
                                 <a target="_blank" href="https://dianix.github.io/LabExp-Clientes/" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
@@ -238,7 +238,7 @@
                         <img src="assets/imgs/proyectos/antojitos.mx.png" alt="antojitosmx">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Antojitos.mx</b></h3>
-                            <p>Aplicación para mostrar ubicación de restaurantes. <br>Uso de API google maps y estilos con Materialize.</p><br>
+                            <p>Aplicación para mostrar ubicación de restaurantes. Uso de API google maps y estilos con Materialize.</p><br>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/antojitos.mx/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/antojitos.mx" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
