--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         <img src="assets/imgs/proyectos/antojitos.mx.png" alt="antojitosmx">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Antojitos.mx</b></h3>
-                            <p>Aplicación para mostrar ubicación de restaurantes. Uso de API google maps y estilos con Materialize.</p><br>
+                            <p>Aplicación para mostrar ubicación de restaurantes. Uso de API google maps y estilos con Materialize.</p>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/antojitos.mx/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/antojitos.mx" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
