--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Experimenta-Canal de Ventas</b></h3>
                             <p>Proyecto colaborativo de maquetación de micro sitio para empresa Experimenta. <b>Diseño ganador en hackaton Lab-Exp, julio de 2017.</b></p>
                             <h6 class="uk-margin-remove uk-text-meta">Login: patitoadm@gmail.com / contra1X</h6>
-                            <div class="uk-margin-small-top">
+                            <div class="uk-margin-remove uk-margin-small-top">
                                 <a target="_blank" href="https://dianix.github.io/LabExp-Clientes/" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/LabExp-Clientes" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
