--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/labcar.png" alt="labcar">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Labcar</b></h3>
-                            <p class="">Maquetación y funcionalidad apoyadas en Bootstrap. Diseño responsive.</p><br>
+                            <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Crowdbotics - Product planner</b></h3>
+                            <p class="">Propuesta de herramienta web para facilitar a los clientes la descripción del producto que desean desarrollar.</p><br>
                             <div>
-                                <a target="_blank" href="https://dianix.github.io/labcar/" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
-                                <a target="_blank" href="https://github.com/dianix/labcar" uk-icon="icon: github-alt; ratio:2"></a>
+                                <a target="_blank" href="https://fast-beyond-92213.herokuapp.com/" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
+                                <a target="_blank" href="https://github.com/dianix/product-planner" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
                     </div>
