--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <img src="assets/imgs/proyectos/crowdbotics.png" alt="labcar">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Crowdbotics - Product planner</b></h3>
-                            <p class="">Propuesta de herramienta web para facilitar a los clientes la descripción del producto que desean desarrollar.</p><br>
+                            <p class=""><b>Proyecto ganador en hackaton Talent Fest Laboratoria 2017.</b> Propuesta de herramienta web para facilitar a los clientes la descripción del producto que desean desarrollar.</p><br>
                             <div>
                                 <a target="_blank" href="https://fast-beyond-92213.herokuapp.com/" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/product-planner" uk-icon="icon: github-alt; ratio:2"></a>
