--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
                         <h6 class="t-g-medio uk-margin-remove">Básico</h6>
                     </div>
                 </div>
-                <div class="icono-xs">
+                <!--<div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/ae.svg" alt="AfterEffects">
                         <p class="t-g-claro uk-margin-small uk-margin-remove-bottom">After Effects</p>
                         <h6 class="t-g-medio uk-margin-remove">Básico</h6>
                     </div>
-                </div>
+                </div>-->
 
             </div>
         </div>
