--- a/index.html
+++ b/index.html
@@ -93,11 +93,19 @@
                 </div>
                 <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
+                        <img src="assets/imgs/tools/glp.svg" alt="Gulp">
+                        <p class="t-g-claro uk-margin-small uk-margin-remove-bottom">Gulp</p>
+                        <h6 class="t-g-medio uk-margin-remove">Básico</h6>
+                    </div>
+                </div>
+                <div class="icono-xs">
+                    <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/sss.svg" alt="Sass">
                         <p class="t-g-claro uk-margin-small uk-margin-remove-bottom">Sass</p>
                         <h6 class="t-g-medio uk-margin-remove">Básico</h6>
                     </div>
                 </div>
+<!--
                 <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/rct.svg" alt="React">
@@ -105,6 +113,7 @@
                         <h6 class="t-g-medio uk-margin-remove">Básico</h6>
                     </div>
                 </div>
+-->
             </div>
 
             <h5 class="t-verde julius uk-heading-line">Frameworks CSS</h5>
