--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         </div>
         <div class="uk-flex uk-flex-column uk-flex-middle uk-flex-center">
 
-            <div id="yop" class="uk-text-center animated pulse">
-                <div class="uk-inline-clip uk-transition-toggle" uk-scrollspy="cls: uk-animation-shake; repeat: true">
+            <div id="yop" class="uk-text-center">
+                <div class="uk-inline-clip uk-transition-toggle" >
                     <a><img src="assets/imgs/yop.jpg" class="uk-border-circle" alt="Diana V."></a>
-                    <div class="uk-transition-fade uk-position-cover uk-position-xlarge uk-overlay uk-overlay-default uk-flex uk-flex-center uk-flex-middle uk-border-circle">
-                        <p> <span class="t-uva uk-text-lead">D</span>iseñadora gráfica & Front End developer<br> Experiencia en áreas de museografía, diseño editorial y edición de imágenes. Con conocimientos de JavaScript, HTML5, CSS3, jQuery, Bootstrap, etc.<br> Gusto por la caligrafía, lettering, encuadernación e ingeniería en papel.</p>
+                    <div class="uk-flex uk-flex-center uk-padding uk-flex-middle">
+                        <p class="uk-padding-small"> <span class="t-uva uk-text-lead">D</span>iseñadora gráfica & Front End developer<br> Experiencia en áreas de museografía, diseño editorial y edición de imágenes. Con conocimientos de JavaScript, HTML5, CSS3, jQuery, Bootstrap, etc.<br> Gusto por la caligrafía, lettering, encuadernación e ingeniería en papel.</p>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                         <h6 class="t-g-medio uk-margin-remove">Básico</h6>
                     </div>
                 </div>
-<!--
+                <!--
                 <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/rct.svg" alt="React">
@@ -187,9 +187,9 @@
         <div class="uk-heading-line uk-text-center uk-container">
             <h2 class="t-g-claro asap-b">Desarrollo web</h2>
         </div>
-        <div  class="uk-margin-medium-top">
+        <div class="uk-margin-medium-top">
             <div class="uk-child-width-1-3@s uk-grid-collapse uk-text-center" uk-grid uk-scrollspy="cls: uk-animation-scale-up; target: .proyec; delay: 500; repeat: true">
-                
+
                 <div class="proyec uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/crowdbotics.png" alt="labcar">
@@ -292,7 +292,7 @@
 
     <!-- jQuery is required -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
+
     <!-- UIkit JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.25/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.25/js/uikit-icons.min.js"></script>
