--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                         <a href="#proyectos" uk-icon="icon: desktop" uk-scroll> <span class="uk-visible@m">Desarrollo web</span>&nbsp;</a>
                     </li>
                     <li>
+                        <a href="#diseno" uk-icon="icon: album" uk-scroll> <span class="uk-visible@m">Diseño</span>&nbsp;</a>
+                    </li>
+                    <li>
                         <a href="#contacto" uk-icon="icon: mail" uk-scroll> <span class="uk-visible@m">Contacto</span>&nbsp;</a>
                     </li>
                 </ul>
@@ -46,8 +49,8 @@
         <div class="uk-flex uk-flex-column uk-flex-middle uk-flex-center">
 
             <div id="yop" class="uk-text-center">
-                <div class="uk-inline-clip uk-transition-toggle" >
-                    <a><img src="assets/imgs/yop.jpg" class="uk-border-circle" alt="Diana V."></a>
+                <div class="uk-inline-clip uk-transition-toggle">
+                    <a><img id="mifoto" src="assets/imgs/yop.jpg" class="uk-border-circle" alt="Diana V."></a>
                     <div class="uk-flex uk-flex-center uk-padding uk-flex-middle">
                         <p class="uk-padding-small"> <span class="t-uva uk-text-lead">D</span>iseñadora gráfica & Front End developer<br> Experiencia en áreas de museografía, diseño editorial y edición de imágenes. Con conocimientos de JavaScript, HTML5, CSS3, jQuery, Bootstrap, etc.<br> Gusto por la caligrafía, lettering, encuadernación e ingeniería en papel.</p>
                     </div>
@@ -117,7 +120,7 @@
             </div>
 
             <h5 class="t-verde julius uk-heading-line">Frameworks CSS</h5>
-            <div class="uk-child-width-1-3@s uk-child-width-1-6@m uk-text-center" uk-grid uk-grid uk-scrollspy="cls: uk-animation-fade; target: .icono-xs; delay: 200; repeat: true">
+            <div class="uk-child-width-1-3@s uk-child-width-1-6@m uk-text-center" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .icono-xs; delay: 200; repeat: true">
                 <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/bt.svg" alt="Bootstrap">
@@ -142,7 +145,7 @@
             </div>
 
             <h4 class="t-verde julius">Herramientas de diseño</h4>
-            <div class="uk-child-width-1-3@s uk-child-width-1-6@m uk-text-center" uk-grid uk-grid uk-scrollspy="cls: uk-animation-fade; target: .icono-xs; delay: 200; repeat: true">
+            <div class="uk-child-width-1-3@s uk-child-width-1-6@m uk-text-center" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .icono-xs; delay: 200; repeat: true">
                 <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/ai.svg" alt="Illustrator">
@@ -192,7 +195,20 @@
 
                 <div class="proyec uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
-                        <img src="assets/imgs/proyectos/crowdbotics.png" alt="labcar">
+                        <img src="assets/imgs/proyectos/4uno.png" alt="4UNO">
+                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
+                            <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Comunidad 4UNO</b></h3>
+                            <p class="">Diseño y maquetación responsiva de sitio web con 7 landings dirigidas a diversos targets y la tienda. <br> También se creó un sitio para ventas.</p><br>
+                            <div>
+                                <a target="_blank" href="https://4uno.org/retencion" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="proyec uk-text-center">
+                    <div class="uk-inline-clip uk-transition-toggle">
+                        <img src="assets/imgs/proyectos/crowdbotics.png" alt="crowdbotics">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Crowdbotics - Product planner</b></h3>
                             <p class="">Propuesta de herramienta web para facilitar a los clientes la descripción del producto que desean desarrollar. <b>Proyecto ganador en hackaton Talent Fest Laboratoria 2017.</b></p><br>
@@ -230,7 +246,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="proyec uk-text-center">
+                <!--<div class="proyec uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/twitter.png" alt="twitter">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
@@ -242,7 +258,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="proyec uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/antojitos.mx.png" alt="antojitosmx">
@@ -269,6 +285,65 @@
                         </div>
                     </div>
                 </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section id="diseno" class="uk-background-muted uk-text-center">
+        <div class="uk-heading-line uk-text-center uk-container">
+            <h2 class="asap-b t-g-azul">Diseño</h2>
+        </div>
+        <div class="uk-margin-medium-top">
+            <div class="uk-child-width-1-3@m uk-grid-collapse" uk-grid uk-scrollspy="cls: uk-animation-scale-up; target: .diseno; delay: 500; repeat: true">
+                <div class="diseno">
+                    <div class="uk-card uk-card-default uk-margin-left uk-margin-right">
+                        <div class="uk-text-center">
+                            <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                                <img src="assets/imgs/diseno/nutricion01.jpg" alt="">
+                                <img src="assets/imgs/diseno/nutricion02.jpg" alt="" class="uk-transition-fade uk-position-cover">
+                            </div>
+                        </div>
+                        <div class="uk-card-body">
+                            <h3 class="uk-card-title">Hospital de Nutrición</h3>
+                            <p>Diseño de gráfica e interactivo.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="diseno">
+                    <div class="uk-card uk-card-default uk-margin-left uk-margin-right">
+                        <div class="uk-text-center">
+                            <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                                <img src="assets/imgs/diseno/unam01.jpg" alt="">
+                                <img src="assets/imgs/diseno/unam02.jpg" alt="" class="uk-transition-fade uk-position-cover">
+                            </div>
+                        </div>
+                        <div class="uk-card-body">
+                            <h3 class="uk-card-title">UNAM Hoy</h3>
+                            <p>Diseño de gráfica de salas.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="diseno">
+                    <div class="uk-card uk-card-default uk-margin-left uk-margin-right">
+                        <div class="uk-text-center">
+                            <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                                <img src="assets/imgs/diseno/naval01.jpg" alt="">
+                                <img src="assets/imgs/diseno/naval02.jpg" alt="" class="uk-transition-fade uk-position-cover">
+                            </div>
+                        </div>
+                        <div class="uk-card-body">
+                            <h3 class="uk-card-title">Museo Naval México</h3>
+                            <p>Diseño de gráfica de salas.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="uk-child-width-1-2@m uk-grid-collapse" uk-grid uk-scrollspy="cls: uk-animation-scale-up; target: .diseno; delay: 500; repeat: true">
+                <div class="diseno">
+                    
+                </div>
+                <div class="diseno"></div>                              
 
             </div>
         </div>
