--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="uk-margin-medium-top">
             <div class="uk-child-width-1-3@s uk-grid-collapse uk-text-center" uk-grid uk-scrollspy="cls: uk-animation-scale-up; target: .proyec; delay: 500; repeat: true">
 
-                <div class="proyec uk-text-center">
+                <!--<div class="proyec uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/4uno.png" alt="4UNO">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
@@ -205,7 +205,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="proyec uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/crowdbotics.png" alt="crowdbotics">
