--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="uk-inline-clip uk-transition-toggle">
                     <a><img id="mifoto" src="assets/imgs/yop.jpg" class="uk-border-circle" alt="Diana V."></a>
                     <div class="uk-flex uk-flex-center uk-padding uk-flex-middle">
-                        <p class="uk-padding-small"> <span class="t-uva uk-text-lead">D</span>iseñadora gráfica & Front End developer<br> Experiencia en áreas de museografía, diseño editorial y edición de imágenes. Con conocimientos de JavaScript, HTML5, CSS3, jQuery, Bootstrap, etc.<br> Gusto por la caligrafía, lettering, encuadernación e ingeniería en papel.</p>
+                        <p class="uk-padding-small"> <span class="t-uva uk-text-lead">¡Hola!</span> Soy Diseñadora gráfica & Front End developer<br> Mi experiencia trabajando con JavaScript, HTML5, CSS3, Vue.js y otras herramientas, es de casi 3 años. También me he desempeñado en áreas de diseño como museografía, editorial y edición de imágenes.<br> Me encanta la caligrafía, lettering y fotografía.</p>
                     </div>
                 </div>
             </div>
