--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 
     <section id="conocimientos" class="g-azul" uk-scrollspy="target: > div; cls:uk-animation-slide-left-medium; delay: 500">
         <div class="uk-heading-line uk-text-center uk-container">
-            <h2 class="bold t-g-claro uk-text-center asap-b">Conocimientos</h2>
+            <h2 class="bold t-g-claro uk-text-center asap-b">Herramientas</h2>
         </div>
         <div id="herramientas" class="uk-grid uk-child-width-1-1@s uk-grid-collapse">
-            <h4 class="t-verde julius uk-text-center@s uk-text-left@m">Herramientas de desarrollo web</h4>
+            <h4 class="t-verde julius uk-text-center@s uk-text-left@m">Desarrollo web</h4>
             <div class="web uk-child-width-1-3@s uk-child-width-1-6@m uk-text-center" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .icono-xs; delay: 200; repeat: true">
                 <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
@@ -94,13 +94,13 @@
                         <h6 class="t-g-medio uk-margin-remove">Intermedio</h6>
                     </div>
                 </div>
-                <div class="icono-xs">
+                <!-- <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/glp.svg" alt="Gulp">
                         <p class="t-g-claro uk-margin-small uk-margin-remove-bottom">Gulp</p>
                         <h6 class="t-g-medio uk-margin-remove">Básico</h6>
                     </div>
-                </div>
+                </div> -->
                 <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/sss.svg" alt="Sass">
@@ -150,14 +150,14 @@
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/ai.svg" alt="Illustrator">
                         <p class="t-g-claro uk-margin-small uk-margin-remove-bottom">Illustator</p>
-                        <h6 class="t-g-medio uk-margin-remove">Avanzado</h6>
+                        <h6 class="t-g-medio uk-margin-remove">Intermedio</h6>
                     </div>
                 </div>
                 <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/ps.svg" alt="Photoshop">
                         <p class="t-g-claro uk-margin-small uk-margin-remove-bottom">Photoshop</p>
-                        <h6 class="t-g-medio uk-margin-remove">Avanzado</h6>
+                        <h6 class="t-g-medio uk-margin-remove">Intermedio</h6>
                     </div>
                 </div>
                 <div class="icono-xs">
@@ -206,6 +206,42 @@
                         </div>
                     </div>
                 </div>-->
+                <div class="proyec uk-text-center">
+                    <div class="uk-inline-clip uk-transition-toggle">
+                        <img src="assets/imgs/proyectos/osmexico.png" alt="OS México">
+                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
+                            <h3 class="t-verde uk-margin-small uk-margin-remove"><b>OS México</b></h3>
+                            <p class="">Maquetación y funcionalidad de sitio web dentro de ambiente laravel, para empresa comercializadora de espectaculares, con base en diseño proporcionado (código privado).<br>
+                            <div>
+                                <a target="_blank" href="https://osmexico.mx/" uk-icon="icon: desktop; ratio:2"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="proyec uk-text-center">
+                    <div class="uk-inline-clip uk-transition-toggle">
+                        <img src="assets/imgs/proyectos/cw.png" alt="Criminal Wings">
+                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
+                            <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Criminal Wings</b></h3>
+                            <p class="">Maquetación y funcionalidad de sitio web dentro de ambiente laravel, para cadena de alitas, con base en diseño proporcionado (código privado).</p><br>
+                            <div>
+                                <a target="_blank" href="http://release.criminalwings.mx/" uk-icon="icon: desktop; ratio:2"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="proyec uk-text-center">
+                    <div class="uk-inline-clip uk-transition-toggle">
+                        <img src="assets/imgs/proyectos/icowork.png" alt="iCowork">
+                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
+                            <h3 class="t-verde uk-margin-small uk-margin-remove"><b>iCowork</b></h3>
+                            <p class="">Diseño, maquetación y funcionalidad de sitio web, para empresa de coworking,  (código privado).</p><br>
+                            <div>
+                                <a target="_blank" href="https://icowork.com.mx/" uk-icon="icon: desktop; ratio:2"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="proyec uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/crowdbotics.png" alt="crowdbotics">
@@ -272,7 +308,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="proyec uk-text-center">
+                <!-- <div class="proyec uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/pokedex.png" alt="pokedex">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
@@ -284,7 +320,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
