--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <img src="assets/imgs/proyectos/osmexico.png" alt="OS México">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>OS México</b></h3>
-                            <p class="">Maquetación y funcionalidad de sitio web dentro de ambiente laravel, para empresa comercializadora de espectaculares, con base en diseño proporcionado (código privado).<br>
+                            <p class="">Maquetación y funcionalidad de sitio y aplicación web dentro de ambiente laravel, para empresa comercializadora de espectaculares, con base en diseño proporcionado (código privado).<br>
                             <div>
                                 <a target="_blank" href="https://osmexico.mx/" uk-icon="icon: desktop; ratio:2"></a>
                             </div>
@@ -222,7 +222,7 @@
                         <img src="assets/imgs/proyectos/icowork.png" alt="iCowork">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>iCowork</b></h3>
-                            <p class="">Diseño, maquetación y funcionalidad de sitio web, para empresa de coworking,  (código privado).</p><br>
+                            <p class="">Diseño, maquetación y funcionalidad de sitio web, para empresa de coworking, (código privado).</p><br>
                             <div>
                                 <a target="_blank" href="https://icowork.com.mx/" uk-icon="icon: desktop; ratio:2"></a>
                             </div>
@@ -349,13 +349,7 @@
                     </div>
                 </div>
             </div>
-            <div class="uk-child-width-1-2@m uk-grid-collapse" uk-grid uk-scrollspy="cls: uk-animation-scale-up; target: .diseno; delay: 500; repeat: true">
-                <div class="diseno">
-                    
-                </div>
-                <div class="diseno"></div>                              
 
-            </div>
         </div>
     </section>
     <footer id="contacto" class="uk-container-expand uva t-g-claro uk-padding">
